--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,6 @@
 
 
 \documentclass[10pt,a4paper,sans]{moderncv}        % possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
-
 % moderncv themes
 \moderncvstyle{classic}                             % style options are 'casual' (default), 'classic', 'oldstyle' and 'banking'
 \moderncvcolor{blue}                               % color options 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
@@ -18,7 +17,9 @@
 \usepackage[utf8]{inputenc}                       % if you are not using xelatex ou lualatex, replace by the encoding you are using
 %\usepackage{CJKutf8}                              % if you need to use CJK to typeset your resume in Chinese, Japanese or Korean
 % adjust the page margins
+            
 \usepackage[scale=0.75]{geometry}
+
 %\setlength{\hintscolumnwidth}{3cm}                % if you want to change the width of the column with the dates
 %\setlength{\makecvtitlenamewidth}{10cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 % personal data
@@ -78,11 +79,11 @@ During this time I learned about Monte Carlo, machine learning algorithms, data 
 
 \section{Publications}
 \cventry{[1]}{Tree Tensor Networks for Generative Modeling}{}{}{}{(In preparation)}
-
-\cventry{[2]}{Information perspective to probabilistic modeling: Boltzmann machines versus born machines}{}{}{}{\textbf{S. Cheng}, J. Chen, L. Wang, Entropy 2018, 20, 583.}
-\cventry{[3]}{Equivalence of restricted Boltzmann machines and tensor network states}{}{}{}{J. Chen, \textbf{S. Cheng}, H. Xie, L. Wang, T. Xiang, Physical Review B, 2018.}
-\cventry{[4]}{Phase Transition of the q-State Clock Model: Duality and Tensor Renormalization}{}{}{}{Chen, J., Liao, H.-J., Xie, H.-D., Han, X.-J., Huang, R.-Z., \textbf{Cheng, S.}, et al.\ 2017, Chinese Physics Letters, 34, 050503.}
-\cventry{[5]}{Quantum entanglement: from quantum states of matter to deep learning}{}{}{}{\textbf{S. Cheng}, J. Chen, L. Wang, Physics, 2017. \newline *Physics is a popular article in Chinese language} 
+\date{}
+\cventry{[2]}{ \href{https://www.mdpi.com/1099-4300/20/8/583}{Information perspective to probabilistic modeling: Boltzmann machines versus born machines}}{}{}{}{\textbf{S. Cheng}, J. Chen, L. Wang, Entropy 2018, 20, 583.}
+\cventry{[3]}{\href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.97.085104}{Equivalence of restricted Boltzmann machines and tensor network states}}{}{}{}{J. Chen, \textbf{S. Cheng}, H. Xie, L. Wang, T. Xiang, Physical Review B, 2018.}
+\cventry{[4]}{\href{http://iopscience.iop.org/article/10.1088/0256-307X/34/5/050503}{Phase Transition of the q-State Clock Model: Duality and Tensor Renormalization}}{}{}{}{Chen, J., Liao, H.-J., Xie, H.-D., Han, X.-J., Huang, R.-Z., \textbf{Cheng, S.}, et al.\ 2017, Chinese Physics Letters, 34, 050503.}
+\cventry{[5]}{\href{http://www.wuli.ac.cn/CN/abstract/abstract70504.shtml}{Quantum entanglement: from quantum states of matter to deep learning}}{}{}{}{\textbf{S. Cheng}, J. Chen, L. Wang, Physics, 2017. \newline *Physics is a popular article in Chinese language} 
 \section{Conferences}
 \cvitem{1}{\textbf{Born machine: generative modeling using tensor network states.} \newline
 The 8th Workshop on Quantum Many-Body Computation, Huangzhou, 2018, Invited talk.}
@@ -90,6 +91,7 @@ The 8th Workshop on Quantum Many-Body Computation, Huangzhou, 2018, Invited talk
 Workshop on the Statistical Physics and Machine Learning, Anqing, 2018, Invited talk.}
 \cvitem{3}{\textbf{Pixel Correlation and Mutual Information: Implication to Unsupervised Learning.} \newline
  Fall Meeting of the China Physics Society, Chengdu, 2017, Invited talk.} 
+
 %\begin{cvcolumns}
 %  \cvcolumn{Category 1}{\begin{itemize}\item Person 1\item Person 2\item Person 3\end{itemize}}
 %  \cvcolumn{Category 2}{Amongst others:\begin{itemize}\item Person 1, and\item Person 2\end{itemize}(more upon request)}
