--- a/main.tex
+++ b/main.tex
@@ -70,7 +70,7 @@
 \cvitem{2014--2016}{After graduating, I joined the group of Prof. Tao Xiang. In the first two years, with the help of Prof. Zhiyuan Xie, I was focus on optimizing the accuracy of the tensor RG algorithm on the antiferromagnetic J1-J2 model. I have tried algorithms such as TEBD, TRG, SRG, HOTRG, HOSRG, etc. At the same time, I also cooperate with Prof. Xie and Prof. Xiang on  studying and improving the TNR and loop-TNR algorithm. During this time, I received a very specific and professional training on the tensor network numerical algorithm.}
 \cvitem{2017}{At the beginning of my third year, as we started to noticed the connection between tensor network and machine learning, I started to cooperate with Prof. Lei Wang and transferred my research to machine learning. Our first result is theoretically proved the exact mapping between RBM and MPS[3]. \newline 
 Our second result is to examine the feasibility of applying tensor network to machine learning problems from the perspective of information theory, and also proposing the quantum extension of Boltzmann machines: Born machinex[2]. \newline
-During this time I learned about Monte Carlo, machine learning algorithms, data structures and algorithms, scientific computing programming paradigm, etc. }
+In the collaboration with Prof. Wang, I learned about Monte Carlo, machine learning algorithms, data structures and algorithms, scientific computing programming paradigm, etc. }
 \cvitem{2018--present}{Since 2018, I started working with Prof. Lei Wang and Prof. Pan Zhang to find a more powerful generative model than the previous MPS. Our choice is tree tensor network. Now we have obtained the current best result of the tensor network generative modeling. The article is in preparation[1]. During this time, I learned many statistical inference, spin glass, GPU parallelism and experience of programming from Pan.}
 
 \section{Awards}
