--- a/main.tex
+++ b/main.tex
@@ -53,37 +53,39 @@
 \cventry{2010.9--2014.6}{B.S. in Physics}{Sichuan University}{Chengdu, China}{}{}  % arguments 3 to 6 can be left empty
 
 \section{Skills}
-\cvlistitem{DMRG and Tensor Networks numerical algorithms}
+\cvlistitem{Tranditional Tensor Networks algorithms(Written: DMRG, TEBD, TRG, SRG, HOTRG, HOSRG, TNR, loop-TNR. Well understood: MERA, CTMRG, Fermion PEPS, PESS)}
 \cvlistitem{Machine Learning models (graphical models, neural nets. etc.) and frameworks (tensorflow/pytorch)}
+\cvlistitem{Some TN machine learning model, such as the MPS for image classification/generation and the Tree TN for image generation.}
 \cvlistitem{Python/Matlab language}
 
 \section{Interests}
 \cvlistitem{Currently, I'm interest in both the traditional tensor network algorithms(on many body physics) and its application on machine learning problems.} %I care about the information/entanglement/entropy in both tensor network models and traditional machine learning models. }
-\cvlistitem{Meanwhile, I also have a strong curiosity on the quantum information/decoding field and also feel happy to do something related.}
 %\cvitem{ Tensor Networks}{Description}
 %\cvitem{Machine learning}{Description}
 %\cvitem{Quantum computation}{Description}
 
 
 \section{Experience}
-\cvitem{2010--2014}{At the undergraduate level, I participated in the Ministry of Education's top talents program. This program selects about 5\%-10\% of students from the science colleges of 21 top universities in China each year to encourage them to engage in fundamental scientific research. I once ,as the captain of the Sichuan University Team, participated in the China Undergraduate Physics Tournament and won a second prize. In this level, I was well trained in a very classic theoretical physics style.}
+\cvitem{2010--2014}{At the undergraduate level, I participated in the Ministry of Education's top talents program. This program selects students from the science colleges of 21 universities in China each year to encourage them to engage in fundamental scientific research. In this level, I was well trained in a very classic theoretical physics style.}
 \cvitem{2014--2016}{After graduating, I joined the group of Prof. Tao Xiang. In the first two years, with the help of Prof. Zhiyuan Xie, I was focus on optimizing the accuracy of the tensor RG algorithm on the antiferromagnetic J1-J2 model. I have tried algorithms such as TEBD, TRG, SRG, HOTRG, HOSRG, etc. At the same time, I also cooperate with Prof. Xie and Prof. Xiang on  studying and improving the TNR and loop-TNR algorithm. During this time, I received a very specific and professional training on the tensor network numerical algorithm.}
 \cvitem{2017}{At the beginning of my third year, as we started to noticed the connection between tensor network and machine learning, I started to cooperate with Prof. Lei Wang and transferred my research to machine learning. Our first result is theoretically proved the exact mapping between RBM and MPS[3]. \newline 
-Our second result is to examine the feasibility of applying tensor network to machine learning problems from the perspective of information theory, and also proposing the quantum extension of Boltzmann machines: Born machinex[2]. \newline
+Our second result is to examine the feasibility of applying tensor network to machine learning problems from the perspective of information theory, and also proposing the extension of Boltzmann machines: Born machine[2]. \newline
 In the collaboration with Prof. Wang, I learned about Monte Carlo, machine learning algorithms, data structures and algorithms, scientific computing programming paradigm, etc. }
 \cvitem{2018--present}{Since 2018, I started working with Prof. Lei Wang and Prof. Pan Zhang to find a more powerful generative model than the previous MPS. Our choice is tree tensor network. Now we have obtained the current best result of the tensor network generative modeling. The article is in preparation[1]. During this time, I learned many statistical inference, spin glass, GPU parallelism and experience of programming from Pan.}
 
 \section{Awards}
 \cvitem{ 2017}{Director Scholarship of the Institute of Physics, Chinese Academy of Sciences.}
-\cvitem{2012, 2013 and 2014}{Top Talents Scholarship on Fundamental Disciplines of the Ministry of Education of The P. R. China (three times).}
+\cvitem{2012, 2013 and 2014}{Top Talents Scholarship on Fundamental Disciplines of the Ministry of Education of China.}
 
 \section{Publications}
-\cventry{[1]}{Tree Tensor Networks for Generative Modeling}{}{}{}{(In preparation)}
+
+\cventry{[1]}{Tree Tensor Networks for Generative Modeling}{}{}{}{\textbf{S. Cheng}, L. Wang, T. Xiang, P. Zhang, arXiv:1901.02217}
 \date{}
 \cventry{[2]}{ \href{https://www.mdpi.com/1099-4300/20/8/583}{Information perspective to probabilistic modeling: Boltzmann machines versus born machines}}{}{}{}{\textbf{S. Cheng}, J. Chen, L. Wang, Entropy 2018, 20, 583.}
 \cventry{[3]}{\href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.97.085104}{Equivalence of restricted Boltzmann machines and tensor network states}}{}{}{}{J. Chen, \textbf{S. Cheng}, H. Xie, L. Wang, T. Xiang, Physical Review B, 2018.}
-\cventry{[4]}{\href{http://iopscience.iop.org/article/10.1088/0256-307X/34/5/050503}{Phase Transition of the q-State Clock Model: Duality and Tensor Renormalization}}{}{}{}{Chen, J., Liao, H.-J., Xie, H.-D., Han, X.-J., Huang, R.-Z., \textbf{Cheng, S.}, et al.\ 2017, Chinese Physics Letters, 34, 050503.}
-\cventry{[5]}{\href{http://www.wuli.ac.cn/CN/abstract/abstract70504.shtml}{Quantum entanglement: from quantum states of matter to deep learning}}{}{}{}{\textbf{S. Cheng}, J. Chen, L. Wang, Physics, 2017. \newline *Physics is a popular article in Chinese language} 
+\cventry{[4]}{Application of Matrix Product Operators in deep neural networks}{}{}{}{Z. F. Gao, \textbf{S. Cheng}, R. Q. He, Z. Y. Xie, H. H. Zhao, Zhong Y. Lu, and T. Xiang, In preparation}
+
+\cventry{[5]}{\href{http://iopscience.iop.org/article/10.1088/0256-307X/34/5/050503}{Phase Transition of the q-State Clock Model: Duality and Tensor Renormalization}}{}{}{}{Chen, J., Liao, H.-J., Xie, H.-D., Han, X.-J., Huang, R.-Z., \textbf{Cheng, S.}, et al.\ 2017, Chinese Physics Letters, 34, 050503.}
 \section{Conferences}
 \cvitem{1}{\textbf{Born machine: generative modeling using tensor network states.} \newline
 The 8th Workshop on Quantum Many-Body Computation, Huangzhou, 2018, Invited talk.}
