--- a/main.tex
+++ b/main.tex
@@ -18,17 +18,17 @@
 %\usepackage{CJKutf8}                              % if you need to use CJK to typeset your resume in Chinese, Japanese or Korean
 % adjust the page margins
             
-\usepackage[scale=0.75]{geometry}
+\usepackage[scale=0.8]{geometry}
 
 %\setlength{\hintscolumnwidth}{3cm}                % if you want to change the width of the column with the dates
 %\setlength{\makecvtitlenamewidth}{10cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 % personal data
 \name{Song}{Cheng}
-\title{Ph.D candidate}                               % optional, remove / comment the line if not wanted
+\title{Ph.D}                               % optional, remove / comment the line if not wanted
 \address{Institute of Physics}{Chinese Academy of Sciences}{100190 Beijing China}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
 \phone[mobile]{(+86)~18500048192}                   % optional, remove / comment the line if not wanted                 
-\email{physichengsong@iphy.ac.cn}                               % optional, remove / comment the line if not wanted             % optional, remove / comment the line if not wanted
-\extrainfo{Birth: May, 24, 1992} %\photo[64pt][0.4pt]{picture}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
+\email{physichengsong@gmail.com}                               % optional, remove / comment the line if not wanted             % optional, remove / comment the line if not wanted
+%\extrainfo{Birth: May, 24, 1992} %\photo[64pt][0.4pt]{picture}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
 %\quote{Some quote}                                 % optional, remove / comment the line if not wanted
 
 % to show numerical labels in the bibliography (default is to show no labels); only useful if you make citations in your resume
@@ -49,8 +49,8 @@
 \makecvtitle
 
 \section{Education}
-\cventry{2014,9-present}{Ph.D in theoretical physics}{Institute of Physics, Chinese Academy of Sciences}{Beijing, China}{}{Supervisors: Prof. Tao Xiang and Prof. Lei Wang}
-\cventry{2010.9--2014.6}{B.S. in Physics}{Sichuan University}{Chengdu, China}{}{}  % arguments 3 to 6 can be left empty
+\cventry{2014,9-2019,6}{Ph.D in Theoretical physics}{Institute of Physics, Chinese Academy of Sciences}{Beijing, China}{}{Supervisors: Prof. Tao Xiang and Prof. Lei Wang}
+\cventry{2010.9-2014.6}{B.S. in Physics}{Sichuan University}{Chengdu, China}{}{}  % arguments 3 to 6 can be left empty
 
 \section{Skills}
 \cvlistitem{Tranditional Tensor Networks algorithms(Written: DMRG, TEBD, TRG, SRG, HOTRG, HOSRG, TNR, loop-TNR. Well understood: MERA, CTMRG, Fermion PEPS, PESS)}
@@ -59,31 +59,31 @@
 \cvlistitem{Python/Matlab language}
 
 \section{Interests}
-\cvlistitem{Currently, I'm interest in both the traditional tensor network algorithms(on many body physics) and its application on machine learning problems.} %I care about the information/entanglement/entropy in both tensor network models and traditional machine learning models. }
+\cvlistitem{Currently, I'm interest in both the traditional tensor network algorithms(on many body physics) and its application on machine learning and quantum computing problems.} %I care about the information/entanglement/entropy in both tensor network models and traditional machine learning models. }
 %\cvitem{ Tensor Networks}{Description}
 %\cvitem{Machine learning}{Description}
 %\cvitem{Quantum computation}{Description}
 
 
-\section{Experience}
-\cvitem{2010--2014}{At the undergraduate level, I participated in the Ministry of Education's top talents program. This program selects students from the science colleges of 21 universities in China each year to encourage them to engage in fundamental scientific research. In this level, I was well trained in a very classic theoretical physics style.}
-\cvitem{2014--2016}{After graduating, I joined the group of Prof. Tao Xiang. In the first two years, with the help of Prof. Zhiyuan Xie, I was focus on optimizing the accuracy of the tensor RG algorithm on the antiferromagnetic J1-J2 model. I have tried algorithms such as TEBD, TRG, SRG, HOTRG, HOSRG, etc. At the same time, I also cooperate with Prof. Xie and Prof. Xiang on  studying and improving the TNR and loop-TNR algorithm. During this time, I received a very specific and professional training on the tensor network numerical algorithm.}
-\cvitem{2017}{At the beginning of my third year, as we started to noticed the connection between tensor network and machine learning, I started to cooperate with Prof. Lei Wang and transferred my research to machine learning. Our first result is theoretically proved the exact mapping between RBM and MPS[3]. \newline 
-Our second result is to examine the feasibility of applying tensor network to machine learning problems from the perspective of information theory, and also proposing the extension of Boltzmann machines: Born machine[2]. \newline
-In the collaboration with Prof. Wang, I learned about Monte Carlo, machine learning algorithms, data structures and algorithms, scientific computing programming paradigm, etc. }
-\cvitem{2018--present}{Since 2018, I started working with Prof. Lei Wang and Prof. Pan Zhang to find a more powerful generative model than the previous MPS. Our choice is tree tensor network. Now we have obtained the current best result of the tensor network generative modeling. The article is in preparation[1]. During this time, I learned many statistical inference, spin glass, GPU parallelism and experience of programming from Pan.}
+%\section{Experience}
+%\cvitem{2010--2014}{At the undergraduate level, I participated in the Ministry of Education's top talents program. This program selects students from the science colleges of 21 universities in China each year to encourage them to engage in fundamental scientific research. In this level, I was well trained in a very classic theoretical physics style.}
+%\cvitem{2014--2016}{After graduating, I joined the group of Prof. Tao Xiang. In the first two years, with the help of Prof. Zhiyuan Xie, I was focus on optimizing the accuracy of the tensor RG algorithm on the antiferromagnetic J1-J2 model. I have tried algorithms such as TEBD, TRG, SRG, HOTRG, HOSRG, etc. At the same time, I also cooperate with Prof. Xie and Prof. Xiang on  studying and improving the TNR and loop-TNR algorithm. During this time, I received a very specific and professional training on the tensor network numerical algorithm.}
+%\cvitem{2017}{At the beginning of my third year, as we started to noticed the connection between tensor network and machine learning, I started to cooperate with Prof. Lei Wang and transferred my research to machine learning. Our first result is theoretically proved the exact mapping between RBM and MPS[3]. \newline 
+%Our second result is to examine the feasibility of applying tensor network to machine learning problems from the perspective of information theory, and also proposing the extension of Boltzmann machines: Born machine[2]. \newline
+%In the collaboration with Prof. Wang, I learned about Monte Carlo, machine learning algorithms, data structures and algorithms, scientific computing programming paradigm, etc. }
+%\cvitem{2018--present}{Since 2018, I started working with Prof. Lei Wang and Prof. Pan Zhang to find a more powerful generative model than the previous MPS. Our choice is tree tensor network. Now we have obtained the current best result of the tensor network generative modeling. The article is in preparation[1]. During this time, I learned many statistical inference, spin glass, GPU parallelism and experience of programming from Pan.}
 
-\section{Awards}
-\cvitem{ 2017}{Director Scholarship of the Institute of Physics, Chinese Academy of Sciences.}
-\cvitem{2012, 2013 and 2014}{Top Talents Scholarship on Fundamental Disciplines of the Ministry of Education of China.}
+%\section{Awards}
+%\cvitem{ 2017}{Director Scholarship of the Institute of Physics, Chinese Academy of Sciences.}
+%\cvitem{2012, 2013 and 2014}{Top Talents Scholarship on Fundamental Disciplines of the Ministry of Education of China.}
 
 \section{Publications}
 
-\cventry{[1]}{Tree Tensor Networks for Generative Modeling}{}{}{}{\textbf{S. Cheng}, L. Wang, T. Xiang, P. Zhang, arXiv:1901.02217}
+\cventry{[1]}{Tree Tensor Networks for Generative Modeling}{}{}{}{\textbf{S. Cheng}, L. Wang, T. Xiang, P. Zhang, Physical Review B,99.155131}
 \date{}
 \cventry{[2]}{ \href{https://www.mdpi.com/1099-4300/20/8/583}{Information perspective to probabilistic modeling: Boltzmann machines versus born machines}}{}{}{}{\textbf{S. Cheng}, J. Chen, L. Wang, Entropy 2018, 20, 583.}
-\cventry{[3]}{\href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.97.085104}{Equivalence of restricted Boltzmann machines and tensor network states}}{}{}{}{J. Chen, \textbf{S. Cheng}, H. Xie, L. Wang, T. Xiang, Physical Review B, 2018.}
-\cventry{[4]}{Application of Matrix Product Operators in deep neural networks}{}{}{}{Z. F. Gao, \textbf{S. Cheng}, R. Q. He, Z. Y. Xie, H. H. Zhao, Zhong Y. Lu, and T. Xiang, In preparation}
+\cventry{[3]}{\href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.97.085104}{Equivalence of restricted Boltzmann machines and tensor network states}}{}{}{}{J. Chen, \textbf{S. Cheng}, H. Xie, L. Wang, T. Xiang, Physical Review B, 97 (8), 085104.}
+\cventry{[4]}{Compressing deep neural networks by matrix product operators}{}{}{}{Z. F. Gao, \textbf{S. Cheng}, R. Q. He, Z. Y. Xie, H. H. Zhao, Zhong Y. Lu, and T. Xiang, arXiv:1904.06194}
 
 \cventry{[5]}{\href{http://iopscience.iop.org/article/10.1088/0256-307X/34/5/050503}{Phase Transition of the q-State Clock Model: Duality and Tensor Renormalization}}{}{}{}{Chen, J., Liao, H.-J., Xie, H.-D., Han, X.-J., Huang, R.-Z., \textbf{Cheng, S.}, et al.\ 2017, Chinese Physics Letters, 34, 050503.}
 \section{Conferences}
