--- a/main.tex
+++ b/main.tex
@@ -53,13 +53,13 @@
 \cventry{2010.9-2014.6}{B.S. in Physics}{Sichuan University}{Chengdu, China}{}{}  % arguments 3 to 6 can be left empty
 
 \section{Skills}
-\cvlistitem{Tranditional Tensor Networks algorithms(Written: DMRG, TEBD, TRG, SRG, HOTRG, HOSRG, TNR, loop-TNR. Well understood: MERA, CTMRG, Fermion PEPS, PESS)}
-\cvlistitem{Machine Learning models (graphical models, neural nets. etc.) and frameworks (tensorflow/pytorch)}
+\cvlistitem{Tranditional Tensor Networks algorithms (Written: DMRG, TEBD, TRG, SRG, HOTRG, HOSRG, TNR, loop-TNR. Well understood: MERA, CTMRG, Fermion PEPS, PESS)}
+\cvlistitem{Machine Learning models (neural nets., graphical models, autoregressive models, flow models, etc.) and frameworks (tensorflow/pytorch)}
 \cvlistitem{Some TN machine learning model, such as the MPS for image classification/generation and the Tree TN for image generation.}
 \cvlistitem{Python/Matlab language}
 
 \section{Interests}
-\cvlistitem{Currently, I'm interest in both the traditional tensor network algorithms(on many body physics) and its application on machine learning and quantum computing problems.} %I care about the information/entanglement/entropy in both tensor network models and traditional machine learning models. }
+\cvlistitem{Currently, I'm interest in both the traditional tensor network algorithms (on many body physics) and its application on machine learning and quantum computing problems.} %I care about the information/entanglement/entropy in both tensor network models and traditional machine learning models. }
 %\cvitem{ Tensor Networks}{Description}
 %\cvitem{Machine learning}{Description}
 %\cvitem{Quantum computation}{Description}
@@ -77,15 +77,15 @@
 %\cvitem{ 2017}{Director Scholarship of the Institute of Physics, Chinese Academy of Sciences.}
 %\cvitem{2012, 2013 and 2014}{Top Talents Scholarship on Fundamental Disciplines of the Ministry of Education of China.}
 
-\section{Publications}
-
-\cventry{[1]}{Tree Tensor Networks for Generative Modeling}{}{}{}{\textbf{S. Cheng}, L. Wang, T. Xiang, P. Zhang, Physical Review B,99.155131}
+\section{Publications }
+\cvlistitem{total citation: 113}
+\cventry{[1]}{\href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.99.155131}{Tree Tensor Networks for Generative Modeling}}{}{}{}{\textbf{S. Cheng}, L. Wang, T. Xiang, P. Zhang, Physical Review B,99.155131}
 \date{}
 \cventry{[2]}{ \href{https://www.mdpi.com/1099-4300/20/8/583}{Information perspective to probabilistic modeling: Boltzmann machines versus born machines}}{}{}{}{\textbf{S. Cheng}, J. Chen, L. Wang, Entropy 2018, 20, 583.}
 \cventry{[3]}{\href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.97.085104}{Equivalence of restricted Boltzmann machines and tensor network states}}{}{}{}{J. Chen, \textbf{S. Cheng}, H. Xie, L. Wang, T. Xiang, Physical Review B, 97 (8), 085104.}
-\cventry{[4]}{Compressing deep neural networks by matrix product operators}{}{}{}{Z. F. Gao, \textbf{S. Cheng}, R. Q. He, Z. Y. Xie, H. H. Zhao, Zhong Y. Lu, and T. Xiang, arXiv:1904.06194}
-
+\cventry{[4]}{\href{https://arxiv.org/abs/1904.06194}{Compressing deep neural networks by matrix product operators}}{}{}{}{Z. F. Gao, \textbf{S. Cheng (co-author)}, R. Q. He, Z. Y. Xie, H. H. Zhao, Zhong Y. Lu, and T. Xiang, arXiv:1904.06194}
 \cventry{[5]}{\href{http://iopscience.iop.org/article/10.1088/0256-307X/34/5/050503}{Phase Transition of the q-State Clock Model: Duality and Tensor Renormalization}}{}{}{}{Chen, J., Liao, H.-J., Xie, H.-D., Han, X.-J., Huang, R.-Z., \textbf{Cheng, S.}, et al.\ 2017, Chinese Physics Letters, 34, 050503.}
+
 \section{Conferences}
 \cvitem{1}{\textbf{Born machine: generative modeling using tensor network states.} \newline
 The 8th Workshop on Quantum Many-Body Computation, Huangzhou, 2018, Invited talk.}
