--- a/main.tex
+++ b/main.tex
@@ -18,16 +18,16 @@
 %\usepackage{CJKutf8}                              % if you need to use CJK to typeset your resume in Chinese, Japanese or Korean
 % adjust the page margins
             
-\usepackage[scale=0.8]{geometry}
+\usepackage[scale=0.85]{geometry}
 
 %\setlength{\hintscolumnwidth}{3cm}                % if you want to change the width of the column with the dates
 %\setlength{\makecvtitlenamewidth}{10cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 % personal data
 \name{Song}{Cheng}
-\title{Ph.D}                               % optional, remove / comment the line if not wanted
-\address{Institute of Physics}{Chinese Academy of Sciences}{100190 Beijing China}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
+\title{Assistant Researcher}                               % optional, remove / comment the line if not wanted
+\address{Center of Quantum Computing}{Peng Cheng Laboratory}{Shenzhen China}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
 \phone[mobile]{(+86)~18500048192}                   % optional, remove / comment the line if not wanted                 
-\email{physichengsong@gmail.com}                               % optional, remove / comment the line if not wanted             % optional, remove / comment the line if not wanted
+\email{chengs@pcl.ac.cn}                               % optional, remove / comment the line if not wanted             % optional, remove / comment the line if not wanted
 %\extrainfo{Birth: May, 24, 1992} %\photo[64pt][0.4pt]{picture}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
 %\quote{Some quote}                                 % optional, remove / comment the line if not wanted
 
@@ -66,7 +66,7 @@
 
 
 %\section{Experience}
-%\cvitem{2010--2014}{At the undergraduate level, I participated in the Ministry of Education's top talents program. This program selects students from the science colleges of 21 universities in China each year to encourage them to engage in fundamental scientific research. In this level, I was well trained in a very classic theoretical physics style.}
+%\cvitem{2010--2014}{At the undergraduate level, I participated in the Ministry of Education's top talents program. This program selects outstanding students from the science colleges of 21 top universities in China each year to encourage them engaging in fundamental scientific research. In this level, I was well trained in a very classic theoretical physics style.}
 %\cvitem{2014--2016}{After graduating, I joined the group of Prof. Tao Xiang. In the first two years, with the help of Prof. Zhiyuan Xie, I was focus on optimizing the accuracy of the tensor RG algorithm on the antiferromagnetic J1-J2 model. I have tried algorithms such as TEBD, TRG, SRG, HOTRG, HOSRG, etc. At the same time, I also cooperate with Prof. Xie and Prof. Xiang on  studying and improving the TNR and loop-TNR algorithm. During this time, I received a very specific and professional training on the tensor network numerical algorithm.}
 %\cvitem{2017}{At the beginning of my third year, as we started to noticed the connection between tensor network and machine learning, I started to cooperate with Prof. Lei Wang and transferred my research to machine learning. Our first result is theoretically proved the exact mapping between RBM and MPS[3]. \newline 
 %Our second result is to examine the feasibility of applying tensor network to machine learning problems from the perspective of information theory, and also proposing the extension of Boltzmann machines: Born machine[2]. \newline
@@ -78,7 +78,7 @@
 %\cvitem{2012, 2013 and 2014}{Top Talents Scholarship on Fundamental Disciplines of the Ministry of Education of China.}
 
 \section{Publications }
-\cvlistitem{total citation: 113}
+\cvlistitem{total citation: 129}
 \cventry{[1]}{\href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.99.155131}{Tree Tensor Networks for Generative Modeling}}{}{}{}{\textbf{S. Cheng}, L. Wang, T. Xiang, P. Zhang, Physical Review B,99.155131}
 \date{}
 \cventry{[2]}{ \href{https://www.mdpi.com/1099-4300/20/8/583}{Information perspective to probabilistic modeling: Boltzmann machines versus born machines}}{}{}{}{\textbf{S. Cheng}, J. Chen, L. Wang, Entropy 2018, 20, 583.}
@@ -87,11 +87,13 @@
 \cventry{[5]}{\href{http://iopscience.iop.org/article/10.1088/0256-307X/34/5/050503}{Phase Transition of the q-State Clock Model: Duality and Tensor Renormalization}}{}{}{}{Chen, J., Liao, H.-J., Xie, H.-D., Han, X.-J., Huang, R.-Z., \textbf{Cheng, S.}, et al.\ 2017, Chinese Physics Letters, 34, 050503.}
 
 \section{Conferences}
-\cvitem{1}{\textbf{Born machine: generative modeling using tensor network states.} \newline
+\cvitem{1}{\textbf{Tree Tensor Network for Generative Modeling} \newline
+The APS March Meeting, Boston, 2019.}
+\cvitem{2}{\textbf{Born machine: generative modeling using tensor network states.} \newline
 The 8th Workshop on Quantum Many-Body Computation, Huangzhou, 2018, Invited talk.}
-\cvitem{2}{\textbf{A brief review on the application of tensor networks to the machine Learning problem.} \newline
+\cvitem{3}{\textbf{A brief review on the application of tensor networks to the machine Learning problem.} \newline
 Workshop on the Statistical Physics and Machine Learning, Anqing, 2018, Invited talk.}
-\cvitem{3}{\textbf{Pixel Correlation and Mutual Information: Implication to Unsupervised Learning.} \newline
+\cvitem{4}{\textbf{Pixel Correlation and Mutual Information: Implication to Unsupervised Learning.} \newline
  Fall Meeting of the China Physics Society, Chengdu, 2017, Invited talk.} 
 
 %\begin{cvcolumns}
